<resources>
    <string name="app_name">Logica</string>
    <string name="conjunction">Conjunction (AND)</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="a_b">A ^ B</string>
    <string name="t">T</string>
    <string name="t_f">T/F</string>
    <string name="submit">Submit</string>
    <string name="f">F</string>
    <string name="correctAnswers">"The correct number of answers is: "%d</string>
</resources>
