<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogicaActivity">

    <TextView
        android:id="@+id/conjunction_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/conjunction"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/column_a_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/a"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/column_b_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/conjunction_tv" />

    <TextView
        android:id="@+id/column_b_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/b"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/column_a_and_b_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/column_a_tv"
        app:layout_constraintTop_toBottomOf="@id/conjunction_tv" />

    <TextView
        android:id="@+id/column_a_and_b_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:text="@string/a_b"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/column_b_tv"
        app:layout_constraintTop_toBottomOf="@id/conjunction_tv" />

    <TextView
        android:id="@+id/case1A"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/t"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/case1B"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/column_a_tv" />

    <TextView
        android:id="@+id/case1B"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/t"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/answer1_et"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/column_a_tv"
        app:layout_constraintTop_toBottomOf="@id/column_b_tv" />

    <TextView
        android:id="@+id/case2A"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/t"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/case2B"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/case1A" />

    <TextView
        android:id="@+id/case2B"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/f"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/column_a_and_b_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/column_a_tv"
        app:layout_constraintTop_toBottomOf="@id/case1B" />

    <TextView
        android:id="@+id/case3A"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/f"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/case3B"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/case2A" />

    <TextView
        android:id="@+id/case3B"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/t"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/column_a_and_b_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/column_a_tv"
        app:layout_constraintTop_toBottomOf="@id/case2B" />

    <TextView
        android:id="@+id/case4A"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/f"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/case4B"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/case3A" />

    <TextView
        android:id="@+id/case4B"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/f"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/column_a_and_b_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/column_a_tv"
        app:layout_constraintTop_toBottomOf="@id/case3B" />

    <EditText
        android:id="@+id/answer1_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/t_f"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:maxLength="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/case1B"
        app:layout_constraintTop_toBottomOf="@id/column_a_and_b_tv" />

    <EditText
        android:id="@+id/answer2_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/t_f"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:maxLength="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/case2B"
        app:layout_constraintTop_toBottomOf="@id/answer1_et" />

    <EditText
        android:id="@+id/answer3_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/t_f"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:maxLength="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/case3B"
        app:layout_constraintTop_toBottomOf="@id/answer2_et" />

    <EditText
        android:id="@+id/answer4_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/t_f"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:maxLength="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/case4B"
        app:layout_constraintTop_toBottomOf="@id/answer3_et" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/case4B" />

</androidx.constraintlayout.widget.ConstraintLayout>